<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dominion</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_girlinfo_list">GirlsInfo</string>
    <string name="title_girlinfo_detail">GirlInfo Detail</string>
    <string name="girl_info_ability_header">Ability</string>
    <string name="girl_info_xp_label">XP</string>
    <string name="girl_Info_vigor_label">Vigor</string>
    <string name="game_skill">Skill</string>
    <string name="game_skills">Skills</string>
    <string name="game_skill_maid">Maid</string>
    <string name="game_ability_strength">Strength</string>
    <string name="game_ability_dexterity">Dexterity</string>
    <string name="game_ability_constitution">Constitution</string>
    <string name="game_ability_intelligence">Intelligence</string>
    <string name="game_ability_wisdom">Wisdom</string>
    <string name="game_ability_charisma">Charisma</string>
    <string name="title_activity_main_tab">Dominon</string>
    <string name="hello_world">Hello world!</string>
    <string name="save">save</string>
    <string name="load">load</string>
    <string name="start">start</string>
    <string name="autosave">autosave</string>
    <string name="next_day">next day</string>
    <string name="title_activity_introduction_create_avatar">IntroductionCreateAvatarActivity</string>
    <string name="name">name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_marketslave_list">MarketSlaves</string>
    <string name="title_marketslave_detail">MarketSlave Detail</string>
    <string name="title_room_list">Rooms</string>
    <string name="title_room_detail">Room Detail</string>
    <string name="title_activity_next_day">NextDayActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="buy">buy</string>
    <string name="new_save">new save</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="main_tab_save_title">Save</string>
    <string name="main_tab_save_edit_name_title">Edit name</string>
    <string name="main_tab_load_title">Load</string>
    <string name="tab_castle_name">castle</string>
    <string name="tab_stats_name">stats</string>
    <string name="tab_girls_name">girls</string>
    <string name="tab_world_name">world</string>
    <string name="title_activity_dungeon">DungeonActivity</string>
    <string name="end">конец</string>

</resources>
