<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.korvin.dominion.activity.main.MainTabActivity">

    <item
        android:id="@+id/main_tab_save"
        android:orderInCategory="80"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save" />
    <item
        android:id="@+id/main_tab_load"
        android:orderInCategory="90"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/load" />
    <item
        android:id="@+id/main_tab_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
</menu>
