<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/girlinfo_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textIsSelectable="true"
    tools:context="ru.korvin.dominion.activity.girlinfo.GirlInfoDetailFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="510dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/work_room_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.56" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"></FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ProgressBar
                    android:id="@+id/GirlInfiHPprogressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentRight="false"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:progress="100"
                    android:secondaryProgress="0" />

                <TextView
                    android:id="@+id/GirlInfiHPTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/GirlInfiHPprogressBar"
                    android:layout_alignParentRight="false"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toRightOf="@+id/GirlInfiHPprogressBar"
                    android:text="@string/girl_info_xp_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ProgressBar
                    android:id="@+id/GirlInfoVigorProgressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentRight="false"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:layout_toRightOf="@+id/GirlInfiHPTextView"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:progress="100"
                    android:secondaryProgress="0" />

                <TextView
                    android:id="@+id/GirlInfoVigorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/GirlInfiHPprogressBar"
                    android:layout_alignParentRight="false"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/GirlInfoVigorProgressBar"
                    android:text="@string/girl_Info_vigor_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </RelativeLayout>

            <TextView
                android:id="@+id/girl_info_ability_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/girl_info_ability_header"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/girl_info_strength_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/game_ability_strength"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/girl_info_ability_dexterity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_row="0"
                    android:text="@string/game_ability_dexterity"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/GirlInfoAbilityDexterityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_row="0"
                    android:text="15(-2)"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/girl_info_ability_strength_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:singleLine="true"
                    android:text="10(+15)"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/girl_info_ability_wisdom_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_row="2"
                    android:text="100"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/girl_info_ability_wisdom_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_row="2"
                    android:text="@string/game_ability_wisdom"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/girl_info_ability_constitution_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/game_ability_constitution"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/girl_info_ability_charisma_Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_row="1"
                    android:text="@string/game_ability_charisma"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/girl_info_ability_charisma_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_row="1"
                    android:text="999(-1000)"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/girl_info_ability_intelligence_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:text="@string/game_ability_intelligence"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/girl_info_ability_constitution_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:text="105(-43)"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/girl_info_ability_intelligence_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:text="50"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </GridLayout>

            <TextView
                android:id="@+id/girl_info_skill_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/game_skills"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <GridView
                android:id="@+id/girl_info_skills_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>