<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:baselineAligned="false"
    android:divider="?android:attr/dividerHorizontal"
    android:orientation="horizontal"
    android:showDividers="middle"
    tools:context="ru.korvin.dominion.activity.girlinfo.GirlInfoListActivity">

    <!--
    This layout is a two-pane layout for the GirlsInfo
    master/detail flow. See res/values-large/refs.xml and
    res/values-sw600dp/refs.xml for an example of layout aliases
    that replace the single-pane version of the layout with
    this two-pane version.

    For more on layout aliases, see:
    http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
    -->

    <fragment
        android:id="@+id/girlinfo_list"
        android:name="ru.korvin.dominion.activity.girlinfo.GirlInfoListFragment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:layout="@android:layout/list_content" />

    <FrameLayout
        android:id="@+id/girlinfo_detail_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="510dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:id="@+id/textView" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/work_room_image_view"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.56" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"></FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/GirlInfiHPprogressBar"
                        android:layout_gravity="center_horizontal"
                        android:progress="100"
                        android:secondaryProgress="0"
                        android:focusable="false"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:layout_alignWithParentIfMissing="false"
                        android:layout_alignParentBottom="false"
                        android:layout_alignParentRight="false"
                        android:layout_centerVertical="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/girl_info_xp_label"
                        android:id="@+id/GirlInfiHPTextView"
                        android:layout_alignParentRight="false"
                        android:layout_toRightOf="@+id/GirlInfiHPprogressBar"
                        android:layout_alignBaseline="@+id/GirlInfiHPprogressBar"
                        android:layout_marginRight="5dp"
                        android:layout_margin="5dp"
                        android:layout_centerVertical="true" />

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/GirlInfoVigorProgressBar"
                        android:layout_gravity="center_horizontal"
                        android:progress="100"
                        android:secondaryProgress="0"
                        android:focusable="false"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:layout_alignWithParentIfMissing="false"
                        android:layout_alignParentBottom="false"
                        android:layout_alignParentRight="false"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/GirlInfiHPTextView"
                        android:layout_margin="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/girl_Info_vigor_label"
                        android:id="@+id/GirlInfoVigorTextView"
                        android:layout_alignParentRight="false"
                        android:layout_alignBaseline="@+id/GirlInfiHPprogressBar"
                        android:layout_toRightOf="@+id/GirlInfoVigorProgressBar"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/girl_info_ability_header"
                    android:id="@+id/girl_info_ability_header"
                    android:layout_gravity="center_horizontal" />

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/game_ability_strength"
                        android:id="@+id/girl_info_strength_label"
                        android:layout_row="0"
                        android:layout_column="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/game_ability_dexterity"
                        android:id="@+id/girl_info_ability_dexterity_label"
                        android:layout_row="0"
                        android:layout_column="2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="15(-2)"
                        android:id="@+id/GirlInfoAbilityDexterityValue"
                        android:layout_row="0"
                        android:layout_column="3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/girl_info_ability_strength_value"
                        android:text="10(+15)"
                        android:singleLine="true"
                        android:layout_row="0"
                        android:layout_column="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="100"
                        android:id="@+id/girl_info_ability_wisdom_value"
                        android:layout_row="2"
                        android:layout_column="3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/game_ability_wisdom"
                        android:id="@+id/girl_info_ability_wisdom_label"
                        android:layout_row="2"
                        android:layout_column="2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/game_ability_constitution"
                        android:id="@+id/girl_info_ability_constitution_label"
                        android:layout_row="1"
                        android:layout_column="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/game_ability_charisma"
                        android:id="@+id/girl_info_ability_charisma_Label"
                        android:layout_row="1"
                        android:layout_column="2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="999(-1000)"
                        android:id="@+id/girl_info_ability_charisma_value"
                        android:layout_row="1"
                        android:layout_column="3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/game_ability_intelligence"
                        android:id="@+id/girl_info_ability_intelligence_label"
                        android:layout_row="2"
                        android:layout_column="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="105(-43)"
                        android:id="@+id/girl_info_ability_constitution_value"
                        android:layout_row="1"
                        android:layout_column="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="50"
                        android:id="@+id/girl_info_ability_intelligence_value"
                        android:layout_row="2"
                        android:layout_column="1" />

                </GridLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/game_skills"
                    android:id="@+id/girl_info_skill_header"
                    android:layout_gravity="center_horizontal" />

                <GridView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/girl_info_skills_list"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</LinearLayout>
